@startuml

  namespace com.showcontrol4j.element {
    interface com.showcontrol4j.element.ShowElement {
    }
  }
  

  namespace com.showcontrol4j.element {
    abstract class com.showcontrol4j.element.ShowElementBase {
    }
  }
  

  namespace com.showcontrol4j.element {
    namespace raspberrypi.led {
      abstract class com.showcontrol4j.element.raspberrypi.led.LEDShowElement {
      }
    }
  }
  

  namespace com.showcontrol4j.exception {
    class com.showcontrol4j.exception.NullPinException {
    }
  }
  

  com.showcontrol4j.element.ShowElementBase .up.|> com.showcontrol4j.element.ShowElement
  com.showcontrol4j.element.ShowElementBase o-- com.showcontrol4j.broker.BrokerConnectionFactory : brokerConnectionFactory
  com.showcontrol4j.element.ShowElementBase o-- com.showcontrol4j.exchange.MessageExchange : messageExchange
  com.showcontrol4j.element.raspberrypi.led.LEDShowElement -up-|> com.showcontrol4j.element.ShowElementBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
